tests/rosetta/out/C/brilliant-numbers.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:58Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:58Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
typedef struct {
  list_int bc;
  int next;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_int primesUpTo(int n) {
  list_int sieve = {0, NULL};
  int i = 0;
  while (i <= n) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = 1;
    list_int tmp2 = concat_list_int(sieve, tmp1);
    sieve = tmp2;
    i = i + 1;
  }
  int p = 2;
  while (p * p <= n) {
    if (sieve.data[p]) {
      int m = p * p;
      while (m <= n) {
        sieve.data[m] = 0;
        m = m + p;
      }
    }
    p = p + 1;
  }
  list_int res = list_int_create(0);
  int x = 2;
  while (x <= n) {
    if (sieve.data[x]) {
      int tmp3_data[1];
      list_int tmp3 = {1, tmp3_data};
      tmp3.data[0] = x;
      list_int tmp4 = concat_list_int(res, tmp3);
      res = tmp4;
    }
    x = x + 1;
  }
  return res;
}

list_int sortInts(list_int xs) {
  list_int res = list_int_create(0);
  list_int tmp = xs;
  while (tmp.len > 0) {
    int min = tmp.data[0];
    int idx = 0;
    int i = 1;
    while (i < tmp.len) {
      if ((tmp.data[i] < min)) {
        min = tmp.data[i];
        idx = i;
      }
      i = i + 1;
    }
    res = 0;
    list_int out = list_int_create(0);
    int j = 0;
    while (j < tmp.len) {
      if (j != idx) {
        int tmp5_data[1];
        list_int tmp5 = {1, tmp5_data};
        tmp5.data[0] = tmp.data[j];
        list_int tmp6 = concat_list_int(out, tmp5);
        out = tmp6;
      }
      j = j + 1;
    }
    tmp = out;
  }
  return res;
}

char *commatize(int n) {
  char *tmp7 = _str(n);
  char *s = tmp7;
  int i = strlen(s) - 3;
  while (i >= 1) {
    char *tmp8 = slice_string(s, 0, i);
    char *tmp9 = concat_string(tmp8, ",");
    char *tmp10 = slice_string(s, i, strlen(s));
    char *tmp11 = concat_string(tmp9, tmp10);
    s = tmp11;
    i = i - 3;
  }
  return s;
}

int getBrilliant(int digits, int limit, int countOnly) {
  list_int brilliant = list_int_create(0);
  int count = 0;
  int pow = 1;
  int next = 999999999999999;
  int k = 1;
  while (k <= digits) {
    list_int s = list_int_create(0);
    for (int tmp12 = 0; tmp12 < primes.len; tmp12++) {
      int p = primes.data[tmp12];
      if (p >= pow * 10) {
        break;
      }
      if (p > pow) {
        int tmp13_data[1];
        list_int tmp13 = {1, tmp13_data};
        tmp13.data[0] = p;
        list_int tmp14 = concat_list_int(s, tmp13);
        s = tmp14;
      }
    }
    int i = 0;
    while ((i < s.len)) {
      int j = i;
      while ((j < s.len)) {
        int prod = s.data[i] * s.data[j];
        if ((prod < limit)) {
          if (countOnly) {
            count = count + 1;
          } else {
            int tmp15_data[1];
            list_int tmp15 = {1, tmp15_data};
            tmp15.data[0] = prod;
            list_int tmp16 = concat_list_int(brilliant, tmp15);
            brilliant = tmp16;
          }
        } else {
          if ((prod < next)) {
            next = prod;
          }
          break;
        }
        j = j + 1;
      }
      i = i + 1;
    }
    pow = pow * 10;
    k = k + 1;
  }
  if (countOnly) {
    map_string_int tmp17 = map_string_int_create(2);
    map_string_int_put(&tmp17, "bc", count);
    map_string_int_put(&tmp17, "next", next);
    return tmp17;
  }
  return (tmp_item_t){.bc = brilliant, .next = next};
}

int mochi_main() {
  printf("First 100 brilliant numbers:\n");
  int r = getBrilliant(2, 10000, 0);
  list_int br = sortInts(r.data["bc"]);
  list_int tmp18 = slice_list_int(br, 0, 100);
  br = tmp18;
  int i = 0;
  while (i < br.len) {
    char *tmp19 = _str(br.data[i]);
    char *tmp20 = _str(br.data[i]);
    printf("%d %s\n", tmp20(4, " ") + " ", (0) ? "true" : "false");
    if ((i + 1) % 10 == 0) {
      printf(" %s\n", (1) ? "true" : "false");
    }
    i = i + 1;
  }
  printf(" %s\n", (1) ? "true" : "false");
  int k = 1;
  while (k <= 13) {
    int limit = pow(10, k);
    int r2 = getBrilliant(k, limit, 1);
    int total = r2.data["bc"];
    int next = r2.data["next"];
    char *climit = commatize(limit);
    char *ctotal = commatize(total + 1);
    char *cnext = commatize(next);
    printf("%s\n", "First >= " + climit.pad_start(18, " ") + " is " +
                       ctotal.pad_start(14, " ") +
                       " in the series: " + cnext.pad_start(18, " "));
    k = k + 1;
  }
}

int _mochi_main() {
  list_int primes = primesUpTo(3200000);
  return 0;
}
int main() { return _mochi_main(); }
